--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
@@ -21,3 +21,9 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
+
+
+dev/myoptique-oms/build/
+dev/myoptique-oms/node_modules/
+dev/myoptique-oms/src/components/
+docs/
